repository/repository-server/src/test/resources/models/invalid/InvalidLocation10.fbmodel
vortolang 1.0

namespace com.test.functionblock
version 1.0.0
displayname "InvalidLocation10"
description "Functionblock for Location"

functionblock InvalidLocation10 {
	
	configuration {
	
	}
	
	status {
	  mandatory x as float "Tracks the x axis"
	  mandatory y as float "Tracks the y axis"
	  mandatory z as float "Tracks the z axis"	
	}

}
